<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExhibitDirectionsActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <Button
        android:id="@+id/next_exhibit_direction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/skip_exhibit_direction_btn" />

    <Button
        android:id="@+id/back_exhibit_direction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="40dp"
        android:text="Back"
        app:layout_constraintEnd_toStartOf="@id/skip_exhibit_direction_btn"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/skip_exhibit_direction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/detailed_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Detailed Directions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/current_location_latitude"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:minHeight="48dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/back_exhibit_direction_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/current_location_longitude"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:minHeight="48dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/skip_exhibit_direction_btn"
        app:layout_constraintStart_toEndOf="@+id/current_location_latitude" />

    <Button
        android:id="@+id/set_mock_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Set Location"
        app:layout_constraintBottom_toTopOf="@+id/next_exhibit_direction_btn"
        app:layout_constraintStart_toEndOf="@+id/current_location_longitude" />

    <TextView
        android:id="@+id/direction_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="Filler"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>